Rename and switch commit

--- a/ConditionalsAndLoops/ConditionalsAndLoops.csproj
+++ b/ConditionalsAndLoops/ConditionalsAndLoops.csproj
@@ -43,13 +43,14 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="NastedIfStatements.cs" />
+    <Compile Include="The if-else Statement\NastedIfStatements.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="RelationalOperators.cs" />
-    <Compile Include="TheElseClause.cs" />
-    <Compile Include="TheIfElseIfStatement.cs" />
-    <Compile Include="TheIfElseStatement.cs" />
+    <Compile Include="The if-else Statement\RelationalOperators.cs" />
+    <Compile Include="The if-else Statement\TheElseClause.cs" />
+    <Compile Include="The if-else Statement\TheIfElseIfStatement.cs" />
+    <Compile Include="The if-else Statement\TheIfElseStatement.cs" />
+    <Compile Include="The switch Statement\TheSwitch.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
