--- a/ClassesAndObjects/ClassesAndObjects.csproj
+++ b/ClassesAndObjects/ClassesAndObjects.csproj
@@ -44,8 +44,10 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="ATM.cs" />
+    <Compile Include="Person.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="WHCharacterCreator.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
