--- a/ClassesAndObjects/ClassesAndObjects.csproj
+++ b/ClassesAndObjects/ClassesAndObjects.csproj
@@ -46,6 +46,7 @@
     <Compile Include="ATM.cs" />
     <Compile Include="Person.cs" />
     <Compile Include="Program.cs" />
+    <Compile Include="Properties.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="WHCharacterCreator.cs" />
   </ItemGroup>
