--- a/ArraysAndStrings/ArraysAndStrings.csproj
+++ b/ArraysAndStrings/ArraysAndStrings.csproj
@@ -43,6 +43,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ArraysAndLoops.cs" />
     <Compile Include="BasicArrays.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
